--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/app.ts",
-    "test": "jest --coverage"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "msnodesqlv8": "^4.2.1",
     "mssql": "^11.0.1",
     "mysql2": "^3.11.0",
+    "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
